Fixed portfolio grid spacing issue

--- a/main.css
+++ b/main.css
@@ -209,7 +209,7 @@ a:hover {
 
 #portfolio-grid {
 	padding: 2%;
-	background-color: rgba(0, 0, 0, 0.0);
+	background-color: rgba(0, 0, 0, 0.7)
 }
 
 .portfolio-cell {
